--- a/src/components/sections/Contact/Contact.module.scss
+++ b/src/components/sections/Contact/Contact.module.scss
@@ -2,6 +2,10 @@
 @use '../../../styles/mixins' as *;
 
 .contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
     padding: var(--spacing-xl) 0;
     background-color: var(--background-color);
 }
@@ -11,6 +15,10 @@
     max-width: 600px;
     width: 100%;
     margin: 0 auto;
+
+    @include mobile {
+        padding: 0 1rem;
+    }
 }
 
 .header {
